<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button3"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:layout_marginStart="25dp"
        android:text="@string/string_bt3"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button1"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:text="@string/string_bt1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/buttonClear"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

    <Button
        android:id="@+id/button4"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:text="@string/string_bt4"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/string_bt5"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/string_bt6"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:text="@string/string_bt7"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/string_bt8"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/string_bt9"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button0"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/string_bt0"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/buttonDot"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D59362"
        android:text="@string/string_btDot"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button2"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:layout_marginStart="25dp"
        android:text="@string/string_bt2"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="#D59362"
        android:text="@string/string_btPlus"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button1" />

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#D59362"
        android:text="@string/string_btClear"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginStart="25dp"
        android:backgroundTint="#D59362"
        android:text="@string/string_btBack"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/buttonClear"
        app:layout_constraintTop_toTopOf="@+id/buttonClear" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D59362"
        android:text="@string/string_btMinus"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonPlus"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D59362"
        android:text="@string/string_btMultiply"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonMinus"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D59362"
        android:text="@string/string_btDivide"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonMultiply"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply" />

    <Button
        android:id="@+id/buttonEqually"
        android:layout_width="59dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D59362"
        android:text="@string/string_btEqually"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <TextView
        android:id="@+id/tvOperation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingEnd="5dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/etRightOperand"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toEndOf="@+id/etLeftOperand"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etLeftOperand"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:inputType="number|numberDecimal|numberSigned"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etRightOperand"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="number|numberDecimal|numberSigned"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etLeftOperand" />

</androidx.constraintlayout.widget.ConstraintLayout>